TC: setting bugfixes; add TcEditRedirector

--- a/LANGUAGE/Wcmd_Rus.ini
+++ b/LANGUAGE/Wcmd_Rus.ini
@@ -1919,11 +1919,11 @@ Iconic=0
 
 [em_vim_0251]
     Cmd="%COMMANDER_PATH%\Utilities\Systems\cmd\Windows PowerShell ISE.lnk"
-Param=
-Path=
-Button=
-Menu=Windows PowerShell ISE
-Iconic=0
+    Param=
+    Path=
+    Button=
+    Menu=Windows PowerShell ISE
+    Iconic=0
 
 [em_vim_1251]
     Cmd="%COMMANDER_PATH%\Utilities\Systems\cmd\Windows PowerShell ISE admin.lnk"
@@ -4252,9 +4252,8 @@ Iconic=0
 
 [em_vim_0550]
 Cmd=%COMMANDER_PATH%\TCIMG.exe
-Param=textx=%L||
+Param=textx=%L||[edits=BOX3] 
 
-[edits=BOX3] 
 Path=
 Button=WCMICONS.dll,816
 Menu=Замена в выделенных текстовых файлах – ввод в диалоге
