TC: F4Menu Final; add Commands Help

--- a/LANGUAGE/Wcmd_Rus.ini
+++ b/LANGUAGE/Wcmd_Rus.ini
@@ -6230,3 +6230,17 @@ Iconic=0
     Button=
     Menu=Редактировать все файлы конфигурации
 
+[em_vim_2004]
+    Cmd=%COMMANDER_PATH%\Utilities\Viewer\Viewer.exe "%COMMANDER_PATH%\LANGUAGE\tc_8.52_all_commands.html"
+    Param=
+    Path=
+    Button=WCMICONS.dll,109
+    Menu=Описание всех команд Total Commander 
+
+[em_vim_2005]
+    Cmd=start "" /min /b cmd.exe "/c pushd %temp% && %COMMANDER_PATH%\Plugins\7-Zip\7z.exe e %COMMANDER_PATH%\LANGUAGE\tc_8.52_all_commands.maff allcommands\index.html -aoa > nul 2>&1 && %COMMANDER_PATH%\Utilities\Viewer\Viewer.exe %temp%\index.html && exit "
+    Param=
+    Path=
+    Button=WCMICONS.dll,109
+    Menu=--Описание всех команд Total Commander 
+
