Total Commander: major rework of menu start

--- a/language/wcmd_win10amd64_1_eng.ini
+++ b/language/wcmd_win10amd64_1_eng.ini
@@ -832,8 +832,9 @@ button=%COMMANDER_EXE%,24
 
 [em_ext_commanderpath]
 cmd=cd %COMMANDER_PATH%
-menu=Current Total Commander Folder
-
+menu=Total Commander Folder
+iconic=0
+button=WCMICONS.dll,467
 
 [em_ext_commanderdrive]
 cmd=cd %COMMANDER_DRIVE%\
@@ -8425,8 +8426,8 @@ button=WCMICONS.dll,1062
 
 
 [em_vim_2000]
-cmd=notepad++.exe %COMMANDER_PATH%\LANGUAGE\wcmd_win10amd64_1_eng.ini
-menu=Редактировать файл с меню
+cmd=notepad++.exe %COMMANDER_PATH%\LANGUAGE\wcmd_win10amd64_1_eng.mnu
+menu=Редактировать главное меню
 
 
 [em_vim_2001]
