Save befire update

--- a/language/wcmd_win10amd64_1_eng.ini
+++ b/language/wcmd_win10amd64_1_eng.ini
@@ -4223,8 +4223,8 @@ button=WCMICONS.dll,627
 
 
 [em_vim_0244]
-cmd=%COMMANDER_PATH%\Utilities\Systems\cmd\cmd_admin.lnk
-param=/k "pushd %P"
+cmd="""%COMMANDER_PATH%\Utilities\Systems\cmd\cmd_admin.lnk
+param="""/k pushd %P
 iconic=0
 menu=Командная строка (администратор)
 button=WCMICONS.dll,378
