--- a/language/wcmd_rus.ini
+++ b/language/wcmd_rus.ini
@@ -7143,12 +7143,83 @@ Iconic=0
 
 [em_vim_7474]
 Cmd=notepad++.exe %COMMANDER_PATH%\wincmd.ini %COMMANDER_PATH%\language\wcmd_rus.mnu %COMMANDER_PATH%\language\wcmd_rus.ini %COMMANDER_PATH%\tcimg.ini
+Button=wcmicons.dll,229
+Menu=Редактировать файлы конфигурации в Notepad++
+
+[em_mao_010]
+Cmd=C:\Windows\System32\cmd.exe
 Param=
+Path=
+Button=wcmicons.dll,378
+Menu=cmd
+Iconic=0
+[em_mao_011]
+Cmd=*C:\Windows\System32\cmd.exe
+Param=
+Path=
+Button=%COMMANDER_PATH%\files\_mao\icons.dll,0
+Menu=cmd.admin
+Iconic=0
+[em_mao_012]
+Cmd=%CMDER_ROOT%\vendor\conemu-maximus5\ConEmu64.exe -Single -run {cmd} -new_console:t:"cmd"
+Param=
+Path=
+Button=%COMMANDER_PATH%\files\_mao\icons.dll,4
+Menu=cmd @ cmder
+Iconic=0
+[em_mao_013]
+Cmd=%CMDER_ROOT%\vendor\conemu-maximus5\ConEmu64.exe -Single -run {cmd.admin} -new_console:t:"cmd.admin"
+Param=
+Path=
+Button=%COMMANDER_PATH%\files\_mao\icons.dll,7
+Menu=cmd.admin @ cmder
+Iconic=0
+[em_mao_014]
+Cmd=C:\windows\System32\WindowsPowerShell\v1.0\powershell.EXE
+Param=
+Path=
+Button=%COMMANDER_PATH%\files\_mao\icons.dll,9
+Menu=powershell
+Iconic=0
+[em_mao_015]
+Cmd=*C:\Windows\System32\WindowsPowerShell\v1.0\powershell.exe
+Param=
+Path=%SystemRoot%\System32
+Button=%COMMANDER_PATH%\files\_mao\icons.dll,10
+Menu=powershell.admin
+Iconic=0
+[em_mao_016]
+Cmd=%CMDER_ROOT%\vendor\conemu-maximus5\ConEmu64.exe -Single -run {powershell} -new_console:t:"powershell"
+Param=
+Path=
+Button=%COMMANDER_PATH%\files\_mao\icons.dll,3
+Menu=powershell @ cmder
+Iconic=0
+[em_mao_017]
+Cmd=%CMDER_ROOT%\vendor\conemu-maximus5\ConEmu64.exe -Single -run {powershell.admin} -new_console:t:"powershell.admin"
+Param=
+Path=%SystemRoot%\System32
+Button=%COMMANDER_PATH%\files\_mao\icons.dll,7
+Menu=powershell.admin @ cmder
+Iconic=0
+[em_mao_018]
+Cmd=%SystemRoot%\System32\WindowsPowerShell\v1.0\powershell.EXE -noLogo -noProfile
+Param=
+Path=
+Button=%COMMANDER_PATH%\files\_mao\icons.dll,9
+Menu=powershell.noProfile
+Iconic=0
+[em_mao_019]
+Cmd=*%SystemRoot%\System32\WindowsPowerShell\v1.0\powershell.EXE -noLogo -noProfile
+Param=
+Path=
+Button=%COMMANDER_PATH%\files\_mao\icons.dll,10
+Menu=powershell.admin.noProfile
+Iconic=0
+[em_mao_020]
+Cmd=notepad++.exe %COMMANDER_PATH%\wincmd.ini %COMMANDER_PATH%\language\wcmd_rus.mnu %COMMANDER_PATH%\language\wcmd_rus.ini %COMMANDER_PATH%\tcimg.ini
+Param=
+Path=
 Button=wcmicons.dll,229
 Menu=Редактировать файлы конфигурации в Notepad++
 Iconic=0
-
-[em_vim_1000]
-button=C:\Program Files (x86)\Notepad++\notepad++.exe
-cmd=C:\Program Files (x86)\Notepad++\notepad++.exe
-param=%P%N
