--- a/language/wcmd_rus.lng
+++ b/language/wcmd_rus.lng
@@ -85,7 +85,7 @@ codepage=1251
 125="ОШИБКА!\rФайл должен быть связан с программой, которая будет его печатать.\r\rОткройте файл в соответствующем приложении, и распечатайте его оттуда."
 126="Чтение каталогов: %3i  (ESC - прервать)"
 128="Изменить меню «&Запуск»..."
-129="&Запуск"
+129="      ··· &Start ···      "
 130="Сейчас в окне просмотрщика идёт поиск. Остановите его, прежде чем закрыть программу."
 131="Название нового элемента меню:"
 132="Не выбрана программа.\rВыберите файл с расширением:\r.exe, .com, .bat или .pif."
