--- a/language/wcmd_rus.ini
+++ b/language/wcmd_rus.ini
@@ -383,7 +383,7 @@ Menu=Деинсталляция с UnInstall Tool
 Iconic=0
 
 [em_vim_0048]
-Cmd=%COMMANDER_PATH%\AkelPad.exe
+Cmd=%COMMANDER_PATH%\..\Programs\Text\Akelpad_Image\AkelPad.exe
 Param=
 Path=
 Button=wcmicons.dll,138
@@ -3619,7 +3619,7 @@ Menu=Вкл/Откл "Сворачивать в системный трей"
 Iconic=0
 
 [em_vim_0469]
-Cmd=%COMMANDER_PATH%\AkelPad.exe
+Cmd=%COMMANDER_PATH%\..\Programs\Text\Akelpad_Image\AkelPad.exe
 Param=/Call("Scripts::Main", 1, "OpenAllFiles.vbs", `1 %UL`)
 Path=
 Button=wcmicons.dll,138
@@ -3660,7 +3660,7 @@ Iconic=0
 
 [em_vim_0474]
 Cmd=%TCIMG_EXE%
-Param=openf=%%COMMANDER_PATH%%\TCIMG.ini||%%COMMANDER_PATH%%\AkelPad.exe openf=%%COMMANDER_PATH%%\wincmd.ini||%%COMMANDER_PATH%%\AkelPad.exe openf=%%COMMANDER_PATH%%\LANGUAGE\WCMD_RUS.MNU||%%COMMANDER_PATH%%\AkelPad.exe openf=%%COMMANDER_PATH%%\LANGUAGE\Wcmd_Rus.ini||%%PROGRAMFILES(x86)%%\Notepad++\Notepad++.exe
+Param=openf=%%COMMANDER_PATH%%\TCIMG.ini||%%COMMANDER_PATH%%\..\Programs\Text\Akelpad_Image\AkelPad.exe openf=%%COMMANDER_PATH%%\wincmd.ini||%%COMMANDER_PATH%%\..\Programs\Text\Akelpad_Image\AkelPad.exe openf=%%COMMANDER_PATH%%\LANGUAGE\WCMD_RUS.MNU||%%COMMANDER_PATH%%\..\Programs\Text\Akelpad_Image\AkelPad.exe openf=%%COMMANDER_PATH%%\LANGUAGE\Wcmd_Rus.ini||%%COMMANDER_PATH%%\..\Programs\Text\Akelpad_Image\AkelPad.exe
 Button=wcmicons.dll,229
 Menu=Редактировать файлы конфигурации в AkelPad Image
 
@@ -6983,7 +6983,7 @@ Iconic=0
 
 [em_vim_0915]
 Cmd=%TCIMG_EXE%
-Param=<HOTKEY=02> start=%%COMMANDER_PATH%%\AkelPad.exe <HOTKEY=X> opens=%L||%%COMMANDER_PATH%%\AkelPad.exe
+Param=<HOTKEY=02> start=%%COMMANDER_PATH%%\..\Programs\Text\Akelpad_Image\AkelPad.exe <HOTKEY=X> opens=%L||%%COMMANDER_PATH%%\..\Programs\Text\Akelpad_Image\AkelPad.exe
 Path=
 Button=wcmicons.dll,138
 Menu=Открыть выд. в AkelPad_Image (с ПКМ- открыть AkelPad_Image)
@@ -7141,61 +7141,57 @@ Button=wcmicons.dll,1145
 Menu=Отменить регистрацию XnShellEx64
 Iconic=0
 
-[em_vim_7474]
-Cmd=notepad++.exe %COMMANDER_PATH%\wincmd.ini %COMMANDER_PATH%\language\wcmd_rus.mnu %COMMANDER_PATH%\language\wcmd_rus.ini %COMMANDER_PATH%\tcimg.ini
-Button=wcmicons.dll,229
-Menu=Редактировать файлы конфигурации в Notepad++
 
-[em_mao_010]
+[em_mao_cmd]
 Cmd=C:\Windows\System32\cmd.exe
 Param=
 Path=
 Button=wcmicons.dll,378
 Menu=cmd
 Iconic=0
-[em_mao_011]
+[em_mao_cmdAdmin]
 Cmd=*C:\Windows\System32\cmd.exe
 Param=
 Path=
 Button=%COMMANDER_PATH%\files\_mao\icons.dll,0
 Menu=cmd.admin
 Iconic=0
-[em_mao_012]
+[em_mao_cmdCmder]
 Cmd=%CMDER_ROOT%\vendor\conemu-maximus5\ConEmu64.exe -Single -run {cmd} -new_console:t:"cmd"
 Param=
 Path=
 Button=%COMMANDER_PATH%\files\_mao\icons.dll,4
 Menu=cmd @ cmder
 Iconic=0
-[em_mao_013]
+[em_mao_cmdAdminCmder]
 Cmd=%CMDER_ROOT%\vendor\conemu-maximus5\ConEmu64.exe -Single -run {cmd.admin} -new_console:t:"cmd.admin"
 Param=
 Path=
 Button=%COMMANDER_PATH%\files\_mao\icons.dll,7
 Menu=cmd.admin @ cmder
 Iconic=0
-[em_mao_014]
+[em_mao_powershell]
 Cmd=C:\windows\System32\WindowsPowerShell\v1.0\powershell.EXE
 Param=
 Path=
 Button=%COMMANDER_PATH%\files\_mao\icons.dll,9
 Menu=powershell
 Iconic=0
-[em_mao_015]
+[em_mao_powershellAdmin]
 Cmd=*C:\Windows\System32\WindowsPowerShell\v1.0\powershell.exe
 Param=
 Path=%SystemRoot%\System32
 Button=%COMMANDER_PATH%\files\_mao\icons.dll,10
 Menu=powershell.admin
 Iconic=0
-[em_mao_016]
+[em_mao_powershellCmder]
 Cmd=%CMDER_ROOT%\vendor\conemu-maximus5\ConEmu64.exe -Single -run {powershell} -new_console:t:"powershell"
 Param=
 Path=
 Button=%COMMANDER_PATH%\files\_mao\icons.dll,3
 Menu=powershell @ cmder
 Iconic=0
-[em_mao_017]
+[em_mao_powershellAdminCmder]
 Cmd=%CMDER_ROOT%\vendor\conemu-maximus5\ConEmu64.exe -Single -run {powershell.admin} -new_console:t:"powershell.admin"
 Param=
 Path=%SystemRoot%\System32
@@ -7216,10 +7212,7 @@ Path=
 Button=%COMMANDER_PATH%\files\_mao\icons.dll,10
 Menu=powershell.admin.noProfile
 Iconic=0
-[em_mao_020]
-Cmd=notepad++.exe %COMMANDER_PATH%\wincmd.ini %COMMANDER_PATH%\language\wcmd_rus.mnu %COMMANDER_PATH%\language\wcmd_rus.ini %COMMANDER_PATH%\tcimg.ini
-Param=
-Path=
+[em_mao_editConfig]
+Cmd=notepad++.exe %COMMANDER_PATH%\wincmd.ini %COMMANDER_PATH%\language\wcmd_rus.mnu %COMMANDER_PATH%\language\wcmd_rus.ini %TCIMG_INI%
 Button=wcmicons.dll,229
 Menu=Редактировать файлы конфигурации в Notepad++
-Iconic=0
